<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".backworker.WorkerActivity">

    <Button
        android:id="@+id/btn_worker_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:onClick="startWorker"
        android:text="@string/btn_worker_start_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/tv_worker_state" />

        <TextView
            android:id="@+id/tv_worker_state"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/tv_worker_progress" />

        <TextView
            android:id="@+id/tv_worker_progress"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:text="" />
    </LinearLayout>

</LinearLayout>